messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-green
  labels:
    app: django-messaging
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
      version: green
  template:
    metadata:
      labels:
        app: django-messaging
        version: green
    spec:
      containers:
        - name: django-messaging
          image: simanga/django-messaging:green  # green/candidate image tag
          ports:
            - containerPort: 8000
